@@ -2,3 +2,4 @@ BACKUP_LOCATION='/backups'
 VERBOSE="no"
 NO_ACT="no"
 REPORT="no"
+SPLITPATH=0
